# haskell-calculator

./: calculator.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/60e3e122/: cabal_macros.h
src/: Evaluator.hs  Lexer.hs  Main.hs  Types.hs
