cabal-version: >=1.10
name: calculator
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2019 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/calculator#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

executable calculator
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        hspec

library
  hs-source-dirs: src
  exposed-modules: Lexer,
              Evaluator, 
              Types
  build-depends: base >=4.7 && <5
  default-language: Haskell2010